--- a/smashing-the-stack/Makefile.osx
+++ b/smashing-the-stack/Makefile.osx
@@ -4,7 +4,7 @@ CFLAGS += -Wno-main-return-type -m32 -march=i386
 LDFLAGS += -m32 -march=i386
 DISFLAGS += -disassemble -mcpu=i386 -macho -x86-asm-syntax=att -line-numbers -source -s
 
-PROGRAMS := example1 example2 example3
+PROGRAMS := example1 example2 example3 shellcode
 
 %: %.c
 	$(CC) $(CFLAGS) -g $< -o $@ $(LDFLAGS)
@@ -14,3 +14,6 @@ all: $(PROGRAMS)
 
 clean:
 	- rm -f *.s $(PROGRAMS)
+
+shellcode: shellcode.c
+	$(CC) $(CFLAGS) -static $< -o $@ $(LDFLAGS)
